[gd_scene load_steps=10 format=3 uid="uid://bqg4u64dvkwga"]

[ext_resource type="Theme" uid="uid://dxx5m48t8ucyq" path="res://koi_koi_theme.tres" id="1_paekc"]
[ext_resource type="Texture2D" uid="uid://hqw1gklef1u7" path="res://assets/panel_pale.png" id="2_tm7eh"]
[ext_resource type="Script" uid="uid://beky3jl12des7" path="res://scripts/ui/win_lose_panel.gd" id="3_m3ss7"]
[ext_resource type="Texture2D" uid="uid://c57qhxwfi52lv" path="res://assets/callout_blue.png" id="4_rxr38"]
[ext_resource type="Texture2D" uid="uid://lri4v48rg5ud" path="res://assets/button_tan.png" id="5_034q4"]
[ext_resource type="Texture2D" uid="uid://d0biplgag7uqi" path="res://assets/button_tan_pressed.png" id="6_eu41u"]

[sub_resource type="Theme" id="Theme_s04ys"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjh5u"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_nvy13"]

[node name="WinLosePanel" type="NinePatchRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -400.0
offset_right = 335.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_paekc")
texture = ExtResource("2_tm7eh")
region_rect = Rect2(0, 0, 475, 236)
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
script = ExtResource("3_m3ss7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -134.25
offset_top = -50.0
offset_right = 134.25
offset_bottom = 73.5
grow_horizontal = 2
theme = SubResource("Theme_s04ys")
theme_override_styles/panel = SubResource("StyleBoxFlat_sjh5u")

[node name="Callout" type="NinePatchRect" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_rxr38")
patch_margin_left = 30
patch_margin_top = 60
patch_margin_right = 55
patch_margin_bottom = 50

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="WLDLabel" type="Label" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_nvy13")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 57
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -697.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 45
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 45

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_paekc")
theme_override_colors/font_color = Color(0.99607843, 0.5058824, 0.57254905, 1)
theme_override_font_sizes/font_size = 45
text = "Opponent Score:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OpponentScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_paekc")
theme_override_colors/font_color = Color(0.99607843, 0.5058824, 0.57254905, 1)
theme_override_font_sizes/font_size = 45
text = "0 pts"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_paekc")
theme_override_colors/font_color = Color(0.3529412, 0.73333335, 0.99607843, 1)
theme_override_font_sizes/font_size = 45
text = "Your Score:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_paekc")
theme_override_colors/font_color = Color(0.3529412, 0.73333335, 0.99607843, 1)
theme_override_font_sizes/font_size = 45
text = "0 pts"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
texture_normal = ExtResource("5_034q4")
texture_pressed = ExtResource("6_eu41u")
ignore_texture_size = true
stretch_mode = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/TextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -10.5
offset_right = 18.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Next"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
